# AEADs

./: .clippy.toml  .gitignore  .travis.yml  .typos.toml  Cargo.toml  README.md  SECURITY.md
aead-stream/: CHANGELOG.md  Cargo.toml  README.md
aead-stream/src/: lib.rs
aes-gcm/: CHANGELOG.md  Cargo.toml  README.md
aes-gcm-siv/: CHANGELOG.md  Cargo.toml  README.md
aes-gcm-siv/benches/: aes-gcm-siv.rs
aes-gcm-siv/src/: ctr.rs  ctr32.rs  lib.rs
aes-gcm-siv/tests/: aes128gcmsiv.rs  aes256gcmsiv.rs  ctr_wrap.rs  lib.rs
aes-gcm-siv/tests/common/: mod.rs
aes-gcm-siv/tests/data/: wycheproof-128.blb  wycheproof-128_fail.blb  wycheproof-128_pass.blb  wycheproof-256.blb  wycheproof-256_fail.blb  wycheproof-256_pass.blb
aes-gcm/benches/: aes-gcm.rs
aes-gcm/src/: ctr.rs  ctr32.rs  lib.rs  private.rs  xaes.rs
aes-gcm/tests/: aead_into.rs  aes128gcm.rs  aes256gcm.rs  other_ivlen.rs  xaes256gcm.rs
aes-gcm/tests/common/: mod.rs
aes-gcm/tests/data/: wycheproof-128.blb  wycheproof-128_fail.blb  wycheproof-128_pass.blb  wycheproof-256.blb  wycheproof-256_fail.blb  wycheproof-256_pass.blb
aes-siv/: CHANGELOG.md  Cargo.toml  README.md
aes-siv/src/: lib.rs  siv.rs
aes-siv/tests/: aead.rs  siv.rs
aes-siv/tests/data/: wycheproof-256.blb  wycheproof-256_fail.blb  wycheproof-256_pass.blb  wycheproof-512.blb  wycheproof-512_fail.blb  wycheproof-512_pass.blb
aes-siv/tests/vectors/: aead.rs  mod.rs  siv.rs
ascon-aead/: CHANGELOG.md  Cargo.toml  README.md
ascon-aead/benches/: asconbenches.rs
ascon-aead/src/: asconcore.rs  lib.rs
ascon-aead/tests/: kats.rs  kats_test.rs  reference_kats.rs
ascon-aead128/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
ascon-aead128/src/: asconcore.rs  lib.rs
ascon-aead128/tests/: reference_kats.rs
ascon-aead128/tests/data/: reference_kats.blb  reference_kats_pass.blb
belt-dwp/: Cargo.toml  LICENSE-MIT  README.md
belt-dwp/benches/: mod.rs
belt-dwp/src/: gf.rs  ghash.rs  lib.rs  utils.rs
belt-dwp/src/gf/: gf128_soft64.rs  utils.rs
belt-dwp/tests/: belt.rs
benches/: Cargo.toml
benches/src/: aes-gcm-siv.rs  aes-gcm.rs  ascon-aead.rs  ascon-aead128.rs  belt-dwp.rs  chacha20poly1305.rs  deoxys.rs  dndk-gcm.rs  eax.rs  grain-128aeadv2.rs  hs1-siv.rs
ccm/: CHANGELOG.md  Cargo.toml  README.md
ccm/src/: lib.rs  private.rs  traits.rs
ccm/tests/: ccm.rs  lib.rs  mod.rs  nist.rs
ccm/tests/data/: cavp_ccm_aes128_10_13.blb  cavp_ccm_aes128_10_13_pass.blb  cavp_ccm_aes128_12_13.blb  cavp_ccm_aes128_12_13_pass.blb  cavp_ccm_aes128_14_13.blb  cavp_ccm_aes128_14_13_pass.blb  cavp_ccm_aes128_16_10.blb  cavp_ccm_aes128_16_10_pass.blb  cavp_ccm_aes128_16_11.blb  cavp_ccm_aes128_16_11_pass.blb  cavp_ccm_aes128_16_12.blb  cavp_ccm_aes128_16_12_pass.blb  cavp_ccm_aes128_16_13.blb  cavp_ccm_aes128_16_13_fail.blb  cavp_ccm_aes128_16_13_pass.blb  cavp_ccm_aes128_16_7.blb  cavp_ccm_aes128_16_7_fail.blb  cavp_ccm_aes128_16_7_pass.blb  cavp_ccm_aes128_16_8.blb  cavp_ccm_aes128_16_8_pass.blb  cavp_ccm_aes128_16_9.blb  cavp_ccm_aes128_16_9_pass.blb  cavp_ccm_aes128_4_13.blb  cavp_ccm_aes128_4_13_fail.blb  cavp_ccm_aes128_4_13_pass.blb  cavp_ccm_aes128_4_7.blb  cavp_ccm_aes128_4_7_fail.blb  cavp_ccm_aes128_4_7_pass.blb  cavp_ccm_aes128_6_13.blb  cavp_ccm_aes128_6_13_pass.blb  cavp_ccm_aes128_8_13.blb  cavp_ccm_aes128_8_13_pass.blb  cavp_ccm_aes192_10_13.blb  cavp_ccm_aes192_10_13_pass.blb  cavp_ccm_aes192_12_13.blb  cavp_ccm_aes192_12_13_pass.blb  cavp_ccm_aes192_14_13.blb  cavp_ccm_aes192_14_13_pass.blb  cavp_ccm_aes192_16_10.blb  cavp_ccm_aes192_16_10_pass.blb  (+71 more)
chacha20poly1305/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
chacha20poly1305/benches/: aes-gcm.rs  chacha20poly1305.rs
chacha20poly1305/src/: cipher.rs  legacy.rs  lib.rs  xchacha20poly1305.rs
chacha20poly1305/tests/: aead_into.rs  lib.rs
chacha20poly1305/tests/data/: wycheproof_chacha20poly1305.blb  wycheproof_chacha20poly1305_fail.blb  wycheproof_chacha20poly1305_pass.blb  wycheproof_xchacha20poly1305.blb  wycheproof_xchacha20poly1305_fail.blb  (+1 more)
colm/: CHANGELOG.md  Cargo.toml  README.md
colm/benches/: colm_0.rs
colm/src/: lib.rs  primitives.rs
colm/tests/: test.rs
committing-aead/: Cargo.toml  README.md
committing-aead/src/: lib.rs
committing-aead/tests/: aes128gcm_padding.rs  aes256gcm_ctx.rs  aes256gcm_ctxishhmac.rs  chacha20poly1305_ctx.rs  chacha20poly1305_ctxishhmac.rs  chacha20poly1305_padding.rs  helpers.rs
crypto_box/: CHANGELOG.md  Cargo.toml  README.md
crypto_box/src/: lib.rs
crypto_box/tests/: lib.rs
deoxys/: CHANGELOG.md  Cargo.toml  README.md
deoxys/src/: deoxys_bc.rs  lib.rs  modes.rs
deoxys/tests/: deoxys_i_128.rs  deoxys_i_256.rs  deoxys_ii_128.rs  deoxys_ii_256.rs  mock_buffer.rs
dndk-gcm/: Cargo.toml  README.md
dndk-gcm/src/: lib.rs
dndk-gcm/tests/: dndkgcm.rs
eax/: CHANGELOG.md  Cargo.toml  README.md
eax/benches/: eax.rs
eax/src/: lib.rs  online.rs  stream.rs  traits.rs
eax/tests/: aes128eax.rs
grain-128aeadv2/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
grain-128aeadv2/src/: fsr.rs  grain_core.rs  lib.rs  traits.rs  utils.rs
grain-128aeadv2/tests/: tests.rs  tests_feature.rs  tests_noalloc.rs
hs1-siv/: Cargo.toml  LICENSE-MIT  README.md
hs1-siv/ref/: encrypt.c  main.c  run.sh
hs1-siv/src/: hash.rs  lib.rs
mgm/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
mgm/benches/: mod.rs
mgm/src/: encdec.rs  field.rs  gf.rs  lib.rs  sealed.rs
mgm/tests/: bad_nonce.rs  mod.rs  rfc9058.rs
ocb3/: CHANGELOG.md  Cargo.toml  README.md
ocb3/src/: lib.rs  util.rs
ocb3/tests/: kats.rs  len_check.rs
ring-aead/: Cargo.toml  README.md
ring-aead/src/: lib.rs
ring-aead/tests/: aes128gcm.rs  aes256gcm.rs  chacha20poly1305.rs
sundae/: CHANGELOG.md  Cargo.toml  README.md
sundae/benches/: sundae_enc.rs
sundae/src/: lib.rs
sundae/tests/: test.rs
xaes-256-gcm/: CHANGELOG.md  Cargo.toml  README.md
xaes-256-gcm/src/: lib.rs
xaes-256-gcm/tests/: xaes256gcm.rs
xsalsa20poly1305/: CHANGELOG.md  Cargo.toml  README.md
xsalsa20poly1305/src/: lib.rs
xsalsa20poly1305/tests/: lib.rs
(+67 files in other folders)
