[workspace]
resolver = "3"
members = [
    "aead-stream",
    "aes-gcm",
    "aes-gcm-siv",
    "aes-siv",
    "ascon-aead128",
    "belt-che",
    "belt-dwp",
    "ccm",
    "chacha20poly1305",
    "deoxys",
    "eax",
    "ocb3",
    "xaes-256-gcm",
]

[patch.crates-io]
aead-stream = { path = "aead-stream" }
aes-gcm = { path = "aes-gcm" }

# https://github.com/RustCrypto/traits/pull/2019
aead = { git = "https://github.com/RustCrypto/traits.git" }
crypto-common = { git = "https://github.com/RustCrypto/traits.git" }
