[workspace]
resolver = "3"
members = [
    #"aead-stream",
    "aes-gcm",
    "aes-gcm-siv",
    "aes-siv",
    "ascon-aead128",
    "belt-dwp",
    "ccm",
    "chacha20poly1305",
    "deoxys",
    "eax",
    "ocb3",
    "xaes-256-gcm",
]

[patch.crates-io]
aes-gcm = { path = "aes-gcm" }
aead = { git = "https://github.com/RustCrypto/traits", branch = "aead/minimize" }
