[package]
name = "aead-stream"
version = "0.6.0-rc.2"
description = "Generic implementation of the STREAM online authenticated encryption construction"
authors = ["RustCrypto Developers"]
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/aead-stream"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "stream", "encryption"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
aead = { version = "0.6.0-rc.5", default-features = false }

[features]
alloc = ["aead/alloc"]
