[package]
name = "aes-gcm-siv"
version = "0.12.0-pre"
description = """
Pure Rust implementation of the AES-GCM-SIV Misuse-Resistant Authenticated
Encryption Cipher (RFC 8452) with optional architecture-specific
hardware acceleration
"""
authors = ["RustCrypto Developers"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/aes-gcm-siv"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "aes", "aes-gcm", "encryption", "siv"]
categories = ["cryptography", "no-std"]
rust-version = "1.65"

[dependencies]
aead = { version = "0.6.0-rc.0", default-features = false }
aes = { version = "=0.9.0-pre.1", optional = true }
cipher = "=0.5.0-pre.6"
ctr = "=0.10.0-pre.1"
polyval = { version = "0.7.0-rc.0", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", default-features = false }

[dev-dependencies]
aead = { version = "0.6.0-rc.0", features = ["dev"], default-features = false }

[features]
default = ["aes", "alloc", "getrandom"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
arrayvec = ["aead/arrayvec"]
getrandom = ["aead/getrandom", "rand_core"]
heapless = ["aead/heapless"]
rand_core = ["aead/rand_core"]
stream = ["aead/stream"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
