[package]
name = "aes-gcm"
version = "0.11.0-rc.2"
description = """
Pure Rust implementation of the AES-GCM (Galois/Counter Mode)
Authenticated Encryption with Associated Data (AEAD) Cipher
with optional architecture-specific hardware acceleration
"""
authors = ["RustCrypto Developers"]
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/aes-gcm"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "aes", "encryption", "gcm", "ghash"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
aead = { version = "0.6.0-rc.5", default-features = false }
cipher = "0.5.0-rc.4"
ctr = "0.10.0-rc.2"
ghash = { version = "0.6.0-rc.3", default-features = false }
subtle = { version = "2", default-features = false }

# optional dependencies
aes = { version = "0.9.0-rc.2", optional = true }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
aead = { version = "0.6.0-rc.5", features = ["alloc", "dev"], default-features = false }
hex-literal = "1"

[features]
default = ["aes", "alloc", "getrandom"]
alloc = ["aead/alloc"]

arrayvec = ["aead/arrayvec"]
bytes = ["aead/bytes"]
getrandom = ["aead/getrandom"]
rand_core = ["aead/rand_core"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
