[package]
name = "aes-siv"
version = "0.8.0-rc.1"
description = """
Pure Rust implementation of the AES-SIV Misuse-Resistant Authenticated
Encryption Cipher (RFC 5297) with optional architecture-specific
hardware acceleration
"""
authors = ["RustCrypto Developers"]
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/aes-siv"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "aes", "encryption", "siv"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
aead = "0.6.0-rc.2"
aes = "0.9.0-rc.1"
cipher = "0.5.0-rc.1"
cmac = "0.8.0-rc.1"
ctr = "0.10.0-rc.1"
dbl = "0.5"
digest = { version = "0.11.0-rc.1", features = ["mac"] }
zeroize = { version = "1", optional = true, default-features = false }

# optional dependencies
pmac = { version = "0.8.0-rc.1", optional = true }

[dev-dependencies]
aead = { version = "0.6.0-rc.2", features = ["alloc", "dev"], default-features = false }
blobby = "0.4.0-pre.0"
hex-literal = "1"

[features]
default = ["alloc", "os_rng"]
alloc = ["aead/alloc"]
arrayvec = ["aead/arrayvec"]
bytes = ["aead/bytes"]
os_rng = ["aead/os_rng", "rand_core"]
heapless = ["aead/heapless"]
rand_core = ["aead/rand_core"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
