[package]
name = "aes-siv"
version = "0.8.0-rc.2"
description = """
Pure Rust implementation of the AES-SIV Misuse-Resistant Authenticated
Encryption Cipher (RFC 5297) with optional architecture-specific
hardware acceleration
"""
authors = ["RustCrypto Developers"]
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/aes-siv"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "aes", "encryption", "siv"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
aead = "0.6.0-rc.5"
aes = "0.9.0-rc.2"
cipher = "0.5.0-rc.3"
cmac = "0.8.0-rc.3"
ctr = "0.10.0-rc.2"
dbl = "0.5"
digest = { version = "0.11.0-rc.4", features = ["mac"] }

# optional dependencies
pmac = { version = "0.8.0-rc.3", optional = true }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
aead = { version = "0.6.0-rc.5", features = ["alloc", "dev"], default-features = false }
blobby = "0.4"
hex-literal = "1"

[features]
default = ["alloc", "getrandom"]
alloc = ["aead/alloc"]

arrayvec = ["aead/arrayvec"]
bytes = ["aead/bytes"]
getrandom = ["aead/getrandom"]
rand_core = ["aead/rand_core"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
