[package]
name = "ascon-aead"
version = "0.4.3"
description = "Implementation of the authenticated encryption schemes Ascon-128, Ascon-128a, and Ascon-80pq"
authors = [
    "Sebastian Ramacher <sebastian.ramacher@ait.ac.at>",
    "RustCrypto Developers",
]
edition = "2021"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["AEAD", "ascon", "encryption"]
categories = ["cryptography", "no-std"]
rust-version = "1.56"

[dependencies]
aead = { version = "0.5", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1.5", optional = true, default-features = false, features = [
    "derive",
] }
ascon = "0.3"

[dev-dependencies]
hex = "0.4"
aead = { version = "0.5", features = ["alloc"] }
spectral = { version = "0.6", default-features = false }

[features]
default = ["zeroize", "alloc"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
heapless = ["aead/heapless"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
