[package]
name = "ascon-aead"
version = "0.4.2"
description = "Implementation of the authenticated encryption schemes Ascon-128, Ascon-128a, and Ascon-80pq"
authors = [
    "Sebastian Ramacher <sebastian.ramacher@ait.ac.at>",
    "RustCrypto Developers",
]
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["AEAD", "ascon", "encryption"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
aead = { version = "0.6.0-rc.0", default-features = false, features = ["inout"] }
subtle = { version = "2", default-features = false }
zeroize = { version = "1.6", optional = true, default-features = false, features = ["derive"] }
ascon = "0.4"
inout = { version = "0.2.0-rc.4", default-features = false }

[dev-dependencies]
hex-literal = "0.4"
aead = { version = "0.6.0-rc.0", features = ["alloc", "dev"] }

[features]
default = ["alloc", "os_rng"]
alloc = ["aead/alloc"]
arrayvec = ["aead/arrayvec"]
bytes = ["aead/bytes"]
os_rng = ["aead/os_rng", "rand_core"]
heapless = ["aead/heapless"]
rand_core = ["aead/rand_core"]
zeroize = ["dep:zeroize", "ascon/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
