[package]
name = "belt-dwp"
version = "0.1.0-rc.2"
description = "Pure Rust implementation of the Belt-DWP authenticated encryption algorithm (STB 34.101.31-2020)"
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/belt-dwp"
repository = "https://github.com/RustCrypto/AEADs/tree/master/belt-dwp"
keywords = ["aead", "belt-dwp"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
aead = { version = "0.6.0-rc.5", default-features = false }
belt-block = { version = "0.2.0-rc.2" }
belt-ctr = { version = "0.2.0-rc.2" }
opaque-debug = { version = "0.3" }
subtle = { version = "2", default-features = false }
universal-hash = { version = "0.6.0-rc.3" }
zeroize = { version = "1.8", default-features = false, optional = true }

[dev-dependencies]
hex-literal = "1"

[features]
default = ["alloc", "getrandom"]
alloc = ["aead/alloc"]
arrayvec = ["aead/arrayvec"]
bytes = ["aead/bytes"]
getrandom = ["aead/getrandom"]
rand_core = ["aead/rand_core"]
reduced-round = []
zeroize = ["dep:zeroize", "belt-ctr/zeroize"]

[package.metadata.docs.rs]
all-features = true
