[package]
name = "benches"
version = "0.0.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = "Criterion benchmarks of the AEAD crates"
edition = "2021"
publish = false
rust-version = "1.56"

[workspace]

[dependencies]
criterion = "0.4.0"
rand = "0.9.0"
aes = "=0.9.0-pre.3"
aes-gcm = { path = "../aes-gcm/" }
aes-gcm-siv = { path = "../aes-gcm-siv/" }
ascon-aead = { path = "../ascon-aead/" }
chacha20poly1305 = { path = "../chacha20poly1305/" }
deoxys = { path = "../deoxys/" }
eax = { path = "../eax/" }

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
criterion-cycles-per-byte = "0.4.0"

[[bench]]
name = "aes-gcm"
path = "src/aes-gcm.rs"
harness = false

[[bench]]
name = "aes-gcm-siv"
path = "src/aes-gcm-siv.rs"
harness = false

[[bench]]
name = "ascon-aead"
path = "src/ascon-aead.rs"
harness = false

[[bench]]
name = "chacha20poly1305"
path = "src/chacha20poly1305.rs"
harness = false

[[bench]]
name = "deoxys"
path = "src/deoxys.rs"
harness = false

[[bench]]
name = "eax"
path = "src/eax.rs"
harness = false

[patch.crates-io]
aead-stream = { path = "../aead-stream" }

crypto-common = { git = "https://github.com/RustCrypto/traits.git" }
aead          = { git = "https://github.com/RustCrypto/traits.git" }

chacha20 = { git = "https://github.com/RustCrypto/stream-ciphers.git" }

ctr = { git = "https://github.com/baloo/block-modes.git", branch = "baloo/edition-2024" }

ghash   = { git = "https://github.com/RustCrypto/universal-hashes.git" }
polyval = { git = "https://github.com/RustCrypto/universal-hashes.git" }
