[package]
name = "benches"
version = "0.0.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = "Criterion benchmarks of the AEAD crates"
edition = "2021"
publish = false
rust-version = "1.56"

[workspace]

[dependencies]
criterion = "0.4.0"
rand = "0.9.0"
aes = "0.9.0-rc.2"
aes-gcm = { path = "../aes-gcm/" }
aes-gcm-siv = { path = "../aes-gcm-siv/" }
ascon-aead128 = { path = "../ascon-aead128/" }
chacha20poly1305 = { path = "../chacha20poly1305/" }
deoxys = { path = "../deoxys/" }
eax = { path = "../eax/" }

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
criterion-cycles-per-byte = "0.4.0"

[[bench]]
name = "aes-gcm"
path = "src/aes-gcm.rs"
harness = false

[[bench]]
name = "aes-gcm-siv"
path = "src/aes-gcm-siv.rs"
harness = false

[[bench]]
name = "ascon-aead128"
path = "src/ascon-aead128.rs"
harness = false

[[bench]]
name = "chacha20poly1305"
path = "src/chacha20poly1305.rs"
harness = false

[[bench]]
name = "deoxys"
path = "src/deoxys.rs"
harness = false

[[bench]]
name = "eax"
path = "src/eax.rs"
harness = false
