[package]
name = "ccm"
version = "0.6.0-pre"
description = "Generic implementation of the Counter with CBC-MAC (CCM) mode"
authors = ["RustCrypto Developers"]
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/ccm"
homepage = "https://github.com/RustCrypto/AEADs/tree/master/ccm"
repository = "https://github.com/RustCrypto/AEADs"
categories = ["cryptography", "no-std"]
keywords = ["encryption", "aead"]
rust-version = "1.85"

[dependencies]
aead = { version = "0.6.0-rc.2", default-features = false }
cipher = { version = "0.5.0-rc.1", default-features = false }
ctr = { version = "0.10.0-rc.1", default-features = false }
subtle = { version = "2", default-features = false }

[dev-dependencies]
aead = { version = "0.6.0-rc.2", features = ["dev"], default-features = false }
aes = { version = "0.9.0-rc.1" }
hex-literal = "1"

[features]
default = ["alloc", "os_rng"]
alloc = ["aead/alloc"]
arrayvec = ["aead/arrayvec"]
bytes = ["aead/bytes"]
os_rng = ["aead/os_rng", "rand_core"]
rand_core = ["aead/rand_core"]
