[package]
name = "chacha20poly1305"
version = "0.11.0-rc.2"
description = """
Pure Rust implementation of the ChaCha20Poly1305 Authenticated Encryption
with Additional Data Cipher (RFC 8439) with optional architecture-specific
hardware acceleration. Also contains implementations of the XChaCha20Poly1305
extended nonce variant of ChaCha20Poly1305, and the reduced-round
ChaCha8Poly1305 and ChaCha12Poly1305 lightweight variants.
"""
authors = ["RustCrypto Developers"]
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/chacha20poly1305"
homepage = "https://github.com/RustCrypto/AEADs/tree/master/chacha20poly1305"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "chacha20", "poly1305", "xchacha20", "xchacha20poly1305"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
aead = { version = "0.6.0-rc.3", default-features = false }
chacha20 = { version = "0.10.0-rc.5", default-features = false, features = ["xchacha"] }
cipher = "0.5.0-rc.2"
poly1305 = "0.9.0-rc.3"
zeroize = { version = "1.8", optional = true, default-features = false }

[dev-dependencies]
aead = { version = "0.6.0-rc.3", features = ["dev"], default-features = false }

[features]
default = ["alloc", "getrandom"]
alloc = ["aead/alloc"]
arrayvec = ["aead/arrayvec"]
bytes = ["aead/bytes"]
getrandom = ["aead/getrandom"]
rand_core = ["aead/rand_core"]
reduced-round = []
zeroize = ["dep:zeroize", "chacha20/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
