[package]
name = "colm_rs"
version = "0.0.1"
description = """
Optimized pure Rust implementation of the COLM Authenticated Encryption with Associated
Data (AEAD) cipher, which was selected by the
CAESAR competition as the second choice for in-depth security
"""
authors = ["RustCrypto Developers, Schmid7k"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/deoxys"
repository = "https://github.com/RustCrypto/AEADs/tree/master/colm"
homepage = "https://github.com/RustCrypto"
keywords = ["aead", "colm", "colm0"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2021"

[dependencies]
aead = { version = "0.4.3", default-features = false }
aes = { version = "0.8.1", optional = true }
cipher = "0.4.3"

[dev-dependencies]
criterion = "0.3.5"
criterion-cycles-per-byte = "0.1.2"
rand = "0.8.5"

[features]
default = ["aes", "alloc"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
heapless = ["aead/heapless"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "colm-0"
path = "benches/colm_0.rs"
harness = false
